--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "emoji-picker-react": "^4.11.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
     "zustand": "^4.5.5"
   },
