--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "emoji-picker-react": "^4.11.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
