--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend"
+    "dev": "nodemon server.js"
   },
   "type": "module",
   "keywords": [],
